Adding back buttons, styles changes.

--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -1,11 +1,14 @@
 {% extends 'flask_user/public_base.html' %}
 
 {% block content %}
-{% from "flask_user/_macros.html" import render_field, render_submit_field %}
+{% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
 <div class="well">
 
-    <h3>{%trans%}Forgot Password{%endtrans%}</h3>
+    {{ back_btn('/user/sign-in','Sign In') }}
+
+    <h2>{%trans%}Forgot Password{%endtrans%}</h2>
+    <br />
 
     <form action="" method="POST" class="form" role="form">
         {{ form.hidden_tag() }}
