--- a/portal/static/css/movember_main.css
+++ b/portal/static/css/movember_main.css
@@ -6634,8 +6634,8 @@ button.close {
  * -------------------------- */
 @font-face {
     font-family: 'FontAwesome';
-    src: url("../../vendor/bower/font-awesome/fonts/fontawesome-webfont.eot?v=4.1.0");
-    src: url("../../vendor/bower/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.1.0") format("embedded-opentype"), url("../../vendor/bower/font-awesome/fonts/fontawesome-webfont.woff?v=4.1.0") format("woff"), url("../../vendor/bower/font-awesome/fonts/fontawesome-webfont.ttf?v=4.1.0") format("truetype"), url("../../vendor/bower/font-awesome/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular") format("svg");
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/fonts/fontawesome-webfont.eot?v=4.1.0");
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/fonts/fontawesome-webfont.eot?#iefix&v=4.1.0") format("embedded-opentype"), url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/fonts/fontawesome-webfont.woff?v=4.1.0") format("woff"), url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/fonts/fontawesome-webfont.ttf?v=4.1.0") format("truetype"), url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular") format("svg");
     font-weight: normal;
     font-style: normal;
 }
