--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -7,8 +7,11 @@
     background-image: url('../img/truenth_mtn_background3.jpg');
     height: 74px;
     background-size: cover;
-    margin-bottom: 40px;
+    margin: 0 0 40px 0;
 	padding: 5px 15px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 #tnthLogo {
