--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -25,7 +25,7 @@
 
     <div class="container hidden-xs tnth-nav-main">
         <div id="tnthLogo">
-            <a href="{{PORTAL}}"><img src="{{PORTAL}}{{ url_for('static', filename='img/logo_truenth_diamond_white.png') }}" /></a>
+            <a href="{{PORTAL}}"><img src="{{PORTAL}}{{ url_for('static', filename='img/logo_truenth_alt3.png') }}" /></a>
         </div>
 
         <div id="tnthTopLinks">
@@ -86,7 +86,7 @@
                     <img src="{{movember_profile}}" />
                     <span class="fa fa-caret-down"></span>
                 </button>
-                <a class="navbar-brand" href="{{PORTAL}}" title="Return to TrueNTH home"><img src="{{PORTAL}}{{url_for('static',filename='img/logo_truenth_diamond_white.png')}}" /></a>
+                <a class="navbar-brand" href="{{PORTAL}}" title="Return to TrueNTH home"><img src="{{PORTAL}}{{url_for('static',filename='img/logo_truenth_alt3.png')}}" /></a>
             </div>
             <div id="tnthNavbarXs" class="navbar-collapse collapse" aria-expanded="false">
                 <ul class="nav navbar-nav">
