--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -63,11 +63,11 @@
                 </ul> 
             {% endif %}
             </div>
-            <a class="btn tnth-white" href="{{PORTAL}}" title="Return to TrueNTH Home">
+            <a class="btn tnth-white tnth-nav-btn" href="{{PORTAL}}" id="tnthHomeBtn" title="Return to TrueNTH Home">
                 <i class="fa fa-home fa-2x"></i>
             </a>
             <div class="btn-group nav-userinfo">
-                <button type="button" class="btn tnth-white dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="btn tnth-white tnth-nav-btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-question fa-2x"></i>
                 </button>
                 <ul class="dropdown-menu pull-right" role="menu">
