--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -8,7 +8,7 @@
     background-image: url('../img/truenth_mtn_background3.jpg');
     height: 74px;
     background-size: cover;
-    margin: 0 0 40px 0;
+    margin: 0;
 	padding: 5px 15px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
