--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -33,7 +33,7 @@
     height: inherit;
     line-height: inherit;
 }
-.tnth-white,.tnth-white .f, .tnth-white:visited {
+.tnth-white,.tnth-white .fa, .tnth-white:visited {
     color: #ECF7E5;
     background-color: transparent;
     border-color: transparent;
