Fix typo and test condition to return to 100% passing.

--- a/portal/templates/client_add.html
+++ b/portal/templates/client_add.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block main %}
-{% from "flask_user/_macros.html" import render_field, back_btn }
+{% from "flask_user/_macros.html" import render_field, back_btn %}
 <div class="well">
 
     {{ back_btn('clients','Client Applications') }}
