--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -151,7 +151,7 @@
         $.each(getQs, function(i,val){
             $.ajax ({
                 type: "GET",
-                url: '/api/clinical/'+val+'/{{ user.id }}'
+                url: '/api/patient/{{ user.id }}/clinical/'+val
             }).done(function(data) {
                 // Temporary way of determining what to display based on question answers
                 if (data.value == "true") {
