--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -328,7 +328,7 @@ var getQs = [ "biopsy", "pca_diag", "tx"];
 $.each(getQs, function(i,val){
     $.ajax ({
         type: "GET",
-        url: '/api/clinical/'+val+'/{{ user.id }}'
+        url: '/api/patient/{{ user.id }}/clinical/'+val
     }).done(function(data) {
         var $radios = $('input:radio[name='+val+']');
         if($radios.is(':checked') === false) {
@@ -345,7 +345,7 @@ $("#patientQuestions input").on("change", function(){
     var theVal = $(this).val();
     $.ajax ({
         type: "POST",
-        url: '/api/clinical/'+toCall+'/{{ user.id }}',
+        url: '/api/patient/{{ user.id }}/clinical/'+toCall,
         contentType: "application/json; charset=utf-8",
         dataType: 'json',
         data: JSON.stringify({value: theVal})
@@ -360,7 +360,7 @@ $("#patientQuestions input").on("change", function(){
 // GET and PUT user roles
 $.ajax ({
     type: "GET",
-    url: '/api/roles/{{ user.id }}'
+    url: '/api/user/{{ user.id }}/roles'
 }).done(function(data) {
     $.each(data.roles,function(i,val){
         $("#userRoles input:checkbox[value="+val.name+"]").prop('checked', true);
@@ -379,7 +379,7 @@ $("#userRoles input:checkbox").on("click",function(){
     var toSend = {"roles" : roles}
     $.ajax ({
         type: "PUT",
-        url: '/api/roles/{{ user.id }}',
+        url: '/api/user/{{ user.id }}/roles',
         contentType: "application/json; charset=utf-8",
         dataType: 'json',
         data: JSON.stringify(toSend)
