--- a/portal/templates/questions.html
+++ b/portal/templates/questions.html
@@ -67,7 +67,7 @@ $(document).ready(function(){
     $.each(getQs, function(i,val){
         $.ajax ({
             type: "GET",
-            url: '/api/clinical/'+val+'/{{ user.id }}'
+            url: '/api/patient/{{ user.id }}/clinical/'+val
         }).done(function(data) {
             // Mark existing answers
             $("div[data-topic='"+val+"']").find("[data-value='"+data.value+"']").attr("checked", true).parent().addClass("active");
@@ -88,7 +88,7 @@ $(document).ready(function(){
         var theVal = $(this).attr("data-value");
         $.ajax ({
             type: "POST",
-            url: '/api/clinical/'+toCall+'/{{ user.id }}',
+            url: '/api/patient/{{ user.id }}/clinical/'+toCall,
             contentType: "application/json; charset=utf-8",
             dataType: 'json',
             data: JSON.stringify({value: theVal})
