--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -4,6 +4,7 @@
 <div class="well">
 
     <div class="pull-right">
+        <p>{{ session.display_html|safe }}</p>
         <p><strong>Already have an account?</strong></p>
         <a href='/user/sign-in'
            class="btn btn-block btn-default">
