--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -49,18 +49,18 @@
         <div class="container">
             <div class="row">
 
+                <!--
+                {% if current_user.roles %}
                 <div class="col-sm-3 hidden-xs">
 
                     <div class="list-group tnth-nav-list">
                         <a class="list-group-item" href="{{PORTAL}}/">Home</a>
-                        {% if current_user.roles %}
                         <a class="list-group-item" href="{{PORTAL}}/profile">My TrueNTH Profile</a>
                         <a class="list-group-item" href="{{PORTAL}}/invite">Send an Invite</a>
-                        {% endif %}
                         <a class="list-group-item" href="#">TrueBLOG</a>
                         <a class="list-group-item" href="http://www.movember.com">Movember.com</a>
                     </div>
-                    {% if current_user.roles %}
+
                     <br />
 
                     {% if current_user.has_roles('admin') or current_user.has_roles('application_developer') %}
@@ -73,11 +73,20 @@
                         {% endif %}
                     </div>
                     {% endif %}
-                    {% endif %}
 
                 </div>
+                {% endif %}
 
-                <div class="col-sm-9">
+                <!--
+                {% if current_user.roles %}
+                                <div class="col-sm-9">
+                                {% else %}
+                                <div class="col-xs-12">
+                                {% endif %}
+                                -->
+
+
+                <div class="col-xs-12">
 
                     {% block main %}
                     {% endblock %}
