--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -148,21 +148,62 @@
         var ansYes = 0;
         var ansNo = 0;
 
+        $.ajax ({
+            type: "GET",
+            url: '/api/patient/{{ user.id }}/clinical'
+        }).done(function(data) {
+            $.each(data.entry, function(i,val){
+                if (val.content.valueQuantity.value == "true") {
+                    ansYes++
+                    $("#conditionalContent").show()
+                } else if (data.value == "false") {
+                    ansNo++
+                    $("#conditionalContent").show()
+                }
+            })
+            if (ansYes > 2) {
+                // If yes to all 3, then display self-mgmt
+                $("#sm").show()
+                $("#otherP3p").show()
+            } else if (ansYes > 0) {
+                // If yes is 1 or 2, then display p3p
+                $("#p3p").show()
+                $("#otherSm").show()
+            } else {
+                if (ansNo == 0) {
+                    // If all answers are unknown then display the old-school allContent
+                    $("#allContent").show()
+                } else if (ansNo == 3) {
+                    $("#otherP3p").show()
+                    $("#otherSm").show()
+                }
+            }
+            $("p[data-ans-count='"+ansYes+"']").show()
+            equalHeightBoxes("lead-well")
+        })
+
+
+/**
         $.each(getQs, function(i,val){
+
             $.ajax ({
                 type: "GET",
                 url: '/api/patient/{{ user.id }}/clinical/'+val
             }).done(function(data) {
+                console.log(i)
+                console.log(data)
                 // Temporary way of determining what to display based on question answers
                 if (data.value == "true") {
                     ansYes++;
-                    $("#conditionalContent").show();
+                    $("#conditionalContent").show()
                 } else if (data.value == "false") {
                     ansNo++;
-                    $("#conditionalContent").show();
+                    $("#conditionalContent").show()
                 }
                 // If last question, then decide what to display
-                if (i+1 == getQs.length) {
+                if (i === 2) {
+                    console.log("count is:" +ansYes)
+                    //checkAnswers(ansYes)
                     // If yes to more than 2, then display self management
                     if (ansYes > 2) {
                         $("#sm").show();
@@ -186,8 +227,8 @@
             }).fail(function() {
                 console.log("Problem retrieving data from server.")
             });
-        });
-
+        })
+**/
     });
 </script>
 {% endblock %}
