Link to questions_anon for exploring without any personalization (stop-gap measure), probably need to rethink.

--- a/portal/templates/questions.html
+++ b/portal/templates/questions.html
@@ -77,7 +77,7 @@
         <br /><br />
         <a class="btn btn-tnth-primary hide-initial" id="continueBtn" href="/home">Continue <i class="fa fa-chevron-right"></i></a>
             &nbsp;&nbsp;&nbsp;
-        <a href="home" id="skipTo" class="btn btn-sm btn-default">Skip to general information about prostate cancer</a>
+        <a href="questions_anon" id="skipTo" class="btn btn-sm btn-default">Skip to general information about prostate cancer</a>
 
         <!--
         <p>Skip these questions and see general information on prostate cancer.</p>
