Minor text edit in questions.html

--- a/portal/templates/questions.html
+++ b/portal/templates/questions.html
@@ -11,7 +11,7 @@
 
     <div class="radio">
         <label>
-            <input type="radio" name="identity" value="patient" /> I'm man who is concerned about prostate cancer for myself
+            <input type="radio" name="identity" value="patient" /> I'm a man who is concerned about prostate cancer for myself
         </label>
     </div>
     <div class="radio">
