One more detail on service accounts - hide role controls on service accounts.

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -146,7 +146,7 @@
 
     <hr />
 
-    {% if current_user.has_role('admin') %}
+    {% if current_user.has_role('admin') and not user.has_role('service') %}
     <h3>User Roles for {{ user.username }}</h3>
     <div id="userRoles">
         <div class="form-group">
