Expanding the client notion to include a related intervention.
Clients can now be set to act as a particular intervention.  Through
the client edit form, users have the ability to set public_access,
card_url, and card_html which affects the display on the homepage.

/api/intervention has been added to set individual user access for
interventions w/o public_access set.

--- a/portal/templates/client_add.html
+++ b/portal/templates/client_add.html
@@ -12,6 +12,8 @@
     <form action="/client" method="post">
         {{ form.hidden_tag() }}
 
+        {{ render_field(form.application_role, tabindex=5) }}
+
         {{ render_field(form.application_origins, tabindex=10) }}
 
         <button type="submit" class="btn btn-tnth-primary">Register App</button>
